# charity-donation

./: .flake8  Pipfile  pyproject.toml  requirements.txt
config/: .env-example  settings.py  urls.py
docker/database/: docker-compose.yaml
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_alter_donation_phone_number.py  0003_alter_institution_options_donation_is_taken.py
home/templates/home/: form-confirmation.html  form.html  index.html
static/scripts/: app.js
static/styles/: style.css
templates/: base.html
templates/partials/: footer.html  nav.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_superuser.py
users/templates/users/: account-detail.html  login.html  register.html
