[project]
name = "charity-donation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==24.3.0",
    "django==4.2.14",
    "flake8==6.0.0",
    "flake8-django==1.3",
    "psycopg2-binary>=2.9.11",
    "pytest-cov==4.1.0",
    "pytest-django==4.5.2",
    "python-dotenv==1.0.0",
]

[tool.black]
line-length = 119
target-version = ['py311']
extend-exclude = "^.*/migrations/.*"
